--- a/css/normalize.css
+++ b/css/normalize.css
@@ -26,8 +26,6 @@ html {
  * Remove the margin in all browsers.
  */
 
-body {}
-
 
 /**
  * Render the `main` element consistently in IE.
@@ -39,7 +37,7 @@ main {
 
 
 /**
- * Correct the font size and margin on `h1` elements within `section` and
+ * Correct the font size and  on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
@@ -183,7 +181,7 @@ img {
 
 /**
  * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
+ * 2. Remove the  in Firefox and Safari.
  */
 
 button,
